# cosual

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/agents/: caption_agent.py  code_analyzer.py  github_agent.py  graph.py  image_agent.py  llm.py  models.py  prompt_agent.py  router.py  state.py  video_agent.py
backend/api/: generate.py  history.py  revise.py  security.py
backend/database/: __init__.py  connection.py  models.py
backend/utils/: __init__.py  file_storage.py  title_generator.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.css
frontend/src/api/: client.js
frontend/src/components/: AppNav.vue  AspectRatioPicker.vue  CaptionBox.vue  CodeEditor.vue  PlatformPicker.vue  RevisionChat.vue  ShareLinkedIn.vue  StatusBadge.vue  StyleChips.vue
frontend/src/router/: index.js
frontend/src/stores/: generate.js  history.js
frontend/src/views/: GenerateView.vue  HistoryDetailView.vue  HistoryView.vue  LandingView.vue  StatusView.vue
